<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_gradient"
    android:columnCount="2"
    android:rowCount="@integer/five_int"
    android:rowOrderPreserved="true"
    android:scrollbars="none"
    android:useDefaultMargins="true" >

    <TextView
        android:id="@+id/vendor_inscription"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:text="@string/vendor"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/vendor_name"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/model_inscription"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="1"
        android:text="@string/model"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/model_name"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="1"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/power_inscription"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="2"
        android:text="@string/power"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/power_value"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="2"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/version_inscription"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="4"
        android:text="@string/version"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/version_value"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="4"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</GridLayout>